--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <canvas id="canvas" height="800" width="1200"></canvas>
-        <script type="module" src="index.js"></script> 
+        <script type="module" src="playground.js"></script> 
     </body>
 </html>
