--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
     <head>
         <title>game</title>
+        <style>
+            @font-face {
+                font-family: 'love';
+                src: url('./loveAssets/SpanishTeletext.ttf');
+            }
+        </style>
     </head>
     <body>
-        <canvas id="canvas" height="800" width="1200"></canvas>
-        <script type="module" src="index.js"></script> 
+        <canvas id="canvas" height="800" width="1280"></canvas>
+        <script type="module" src="love.js"></script> 
     </body>
 </html>
