--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         </style>
     </head>
     <body>
+        <audio autoplay>
+            <source src="./loveAssets/Recording.ogg" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
         <canvas id="canvas" height="800" width="1280"></canvas>
         <script type="module" src="love.js"></script> 
     </body>
