--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <audio autoplay>
+        <audio autoplay loop>
             <source src="./loveAssets/Recording.ogg" type="audio/ogg">
             Your browser does not support the audio element.
         </audio>
