--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
         </style>
     </head>
     <body>
+        <!--
         <audio autoplay loop>
             <source src="./loveAssets/Recording.ogg" type="audio/ogg">
             Your browser does not support the audio element.
         </audio>
+        -->
         <canvas id="canvas" height="800" width="1280"></canvas>
-        <script type="module" src="love.js"></script> 
+        <script type="module" src="octonianGame/octonian.js"></script> 
     </body>
 </html>
