move groups into Drawable

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         </audio>
         -->
         <canvas id="canvas" height="800" width="1280"></canvas>
-        <script type="module" src="octonianGame/octonian.js"></script> 
+        <script type="module" src="loveGame/love.js"></script> 
     </body>
 </html>
